The beaten and the damned?